<resources>
    <string name="app_name">DgswBJRank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signIn">로그인</string>
    <string name="pw">비밀번호</string>
    <string name="id">아이디</string>
    <string name="back">뒤로가기</string>
    <string name="signUp">회원가입</string>
    <string name="nickName">닉네임</string>
    <string name="setting">설정</string>
    <string name="complete_edit_profile">프로필 수정 완료</string>
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="bjId">백준 아이디</string>
    <string name="intro">자기소개</string>
    <string name="goal">목표</string>
    <string name="check_nickName">닉네임 확인</string>
    <string name="check_bjId">백준 아이디 확인</string>
    <string name="find_group">그룹 찾기</string>
    <string name="create_group">그룹 만들기</string>
    <string name="create">만들기 (300P)</string>
    <string name="group_name">그룹 이름</string>
    <string name="group_description">그룹 설명</string>
    <string name="group_limit">그룹원 수 제한</string>
</resources>