<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.main.create_group.CreateGroupFragment">
    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.bestswlkh0310.presentation.feature.main.create_group.CreateGroupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/blackSubTitle"
            android:text="@string/create_group" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            android:onClick="@{() -> vm.onClickBack()}"
            android:contentDescription="@string/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/img_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="42dp"
            android:layout_marginStart="12dp"
            android:background="@null"/>
        <TextView
            android:id="@+id/tv_groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            style="@style/blackSubTitle"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_groupName"
            app:layout_constraintTop_toBottomOf="@id/tv_groupName"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="-10dp"
            android:layout_marginHorizontal="17dp"
            android:hint="@string/group_name"
            style="@style/blackText"
            android:text="@={vm.groupName}"
            android:textAllCaps="false"
            android:backgroundTint="@color/gray100"
            android:maxLength="12"
            android:inputType="text"
            android:textCursorDrawable="@color/black100"/>
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_description"
            app:layout_constraintTop_toBottomOf="@id/et_groupName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp"
            android:layout_marginTop="6dp"
            style="@style/blackSubTitle"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_description"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/title"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="-10dp"
            android:layout_marginHorizontal="17dp"
            android:text="@={vm.groupDescription}"
            style="@style/blackText"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@color/black100"
            android:textAllCaps="false"
            android:backgroundTint="@color/gray100"
            android:hint="@string/group_description"/>

        <TextView
            android:id="@+id/tv_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_limit"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp"
            android:layout_marginTop="6dp"
            style="@style/blackSubTitle"/>
        <SeekBar
            android:id="@+id/slider_limit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_limit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:min="1"
            android:max="20"
            android:progress="@={vm.memberLimit}"
            android:background="@color/white100"
            android:thumbTint="@color/main100"
            android:progressBackgroundTint="@color/main100"
            android:progressTint="@color/main100"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/slider_limit"
            app:layout_constraintEnd_toEndOf="@id/slider_limit"
            app:layout_constraintTop_toBottomOf="@id/slider_limit"
            android:text="@{vm.memberLimitResult}"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:text="@string/create"
            style="@style/btnMainStyle"
            android:onClick="@{() -> vm.onClickCreate()}"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            style="@style/btnWhiteStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="48dp"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>