<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.feature.onboard.signup.SignupAFragment">
    <data>
        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.bestswlkh0310.presentation.feature.onboard.sign_up.SignUpViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/blackSubTitle"
            android:text="@string/signUp" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            android:onClick="@{() -> vm.onClickBack()}"
            android:contentDescription="@string/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/img_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="42dp"
            android:layout_marginStart="12dp"
            android:background="@null"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nickName"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/title"
            android:layout_marginTop="50dp"
            android:layout_height="57dp"
            android:layout_width="match_parent"
            android:backgroundTint="@color/gray100"
            style="@style/blackText"
            android:maxLength="12"
            android:paddingStart="18dp"
            android:layout_marginHorizontal="17dp"
            android:text="@={vm.nickName}"
            android:textAllCaps="false"
            android:inputType="text"
            android:hint="@string/nickName"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pw"
            app:layout_constraintTop_toBottomOf="@id/et_nickName"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/title"
            android:layout_marginTop="3dp"
            android:maxLength="12"
            android:paddingStart="18dp"
            android:backgroundTint="@color/gray100"
            android:layout_marginHorizontal="17dp"
            style="@style/blackText"
            android:text="@={vm.userId}"
            android:textAllCaps="false"
            android:inputType="text"
            android:hint="@string/id"
            android:layout_width="match_parent"
            android:layout_height="57dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_bjId"
            app:layout_constraintTop_toBottomOf="@id/et_pw"
            app:layout_constraintStart_toStartOf="@id/et_nickName"
            app:layout_constraintEnd_toEndOf="@id/et_nickName"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:paddingStart="18dp"
            android:layout_marginHorizontal="17dp"
            android:text="@={vm.pw}"
            android:backgroundTint="@color/gray100"
            style="@style/blackText"
            android:textAllCaps="false"
            android:inputType="textPassword"
            android:maxLength="20"
            android:gravity="left|center_vertical"
            android:hint="@string/pw"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/et_bjId"
            app:layout_constraintBottom_toBottomOf="@id/et_bjId"
            android:paddingRight="18dp"
            style="@style/blackText"
            app:layout_constraintEnd_toEndOf="@id/et_nickName"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:text="@string/signUp"
            style="@style/btnMainStyle"
            android:onClick="@{() -> vm.onClickComplete()}"
            android:layout_marginBottom="99dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/check_account_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/check_account_2"
            style="@style/blackText"
            android:text="이미 계정이 있으신가요?  "
            app:layout_constraintHorizontal_chainStyle="packed" />
        <TextView
            app:layout_constraintTop_toBottomOf="@id/btn_next"
            android:id="@+id/check_account_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/check_account_1"
            style="@style/mainText"
            android:onClick="@{() -> vm.onClickSignIn()}"
            android:text="@string/signIn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>